[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ucremote3loxone"
version = "0.1.0"
description = "Driver to integrate the Unfolded Circle Remote 3 with Loxone Miniserver"
authors = [{ name = "UCRemote3" }]
readme = "readme.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-ra"
